# pystory

./: .python-version  LICENSE  README.md  install.sh  pyproject.toml  setup.sh  uninstall.sh
src/pystory/: main.py
sys/: pystory.service
